# rust_actix_backend

./: .env.local  Cargo.toml
migrations/: 20231110171203_init.sql  20231114095851_add_salt_to_password.sql  20231115153149_assessment.sql  20231115164229_change_timestamp_to_epoch.sql
src/: account.rs  assessment.rs  authentication.rs  error.rs  jwt.rs  main.rs  middleware.rs
