[package]
name = "assessment-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-web-httpauth = "0.8.1"
actix-web-validator = "5.0.1"
bb8-redis = "0.13.1"
chrono = "0.4.31"
derive_more = "0.99.17"
jsonwebtoken = "9.1.0"
rand = "0.8.5"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
sha256 = "1.4.0"
sqlx = { version = "0.7.2", features = ["runtime-tokio", "postgres", "json"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "std"] }
validator = { version = "0.16.1", features = ["derive"] }
